examples/test/testpolicy3735.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3735
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key34: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value6
          key6: value20
      podSelector:
        matchLabels:
          key7: value26
          key29: value25
          key6: value25
